<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green700"
    tools:context=".ui.signup.SignUpFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/border_circle_shape"
        android:padding="@dimen/_30sdp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border_rectangle_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtSignup"/>

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_14sdp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/green700"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etNameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:hint="@string/full_name"
        app:endIconMode="clear_text"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/etEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/etPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/btn_Signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textWebPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Signup"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@id/btn_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24sdp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/green700"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>